fixed about layout and removed spacing issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2219,18 +2219,18 @@
 
       h3.about-me-header {
         font-style: italic;
-        text-align: center;
+        text-align: left;
       }
 
       div.about-me {
         -webkit-column-count: 1; /* Chrome, Safari, Opera */
         -moz-column-count: 1; /* Firefox */
         column-count: 1;
-        text-align: center;
+        text-align: left;
         }
 
         .about {
-          text-align: center;
+          text-align: left;
         }
 
 
